--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,48 +3,59 @@
 <?php $actual_link = (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on' ? "https" : "http") . "://$_SERVER[HTTP_HOST]"; ?> */
 
 #main-navbar {
-    background-color: var(--ktcb-primary-blue); /* Black background color */
-    position: fixed; /* Make it stick/fixed */
-    top: 0; /* Stay on top */
-    width: 100%; /* Full width */
-    transition: top 0.3s; /* Transition effect when sliding down (and up) */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    transition: top 0.3s;
     display: flex;
     align-items: center;
+    justify-content: space-between;
     padding: 0 20px;
     z-index: 1000;
-    height: 60px;
+    height: 80px;
 }
 
 #main-navbar .nav-item {
     display: block;
-    color: white;
+    color: #000;
     text-align: center;
     padding: 5px;
     text-decoration: none;
+    transition: all 0.3s linear;
 }
 
-#main-navbar .nav-item:nth-child(n+2) {
+#main-navbar .nav-item {
     padding: 20px;
 }
 
 #main-navbar .nav-item:hover {
-    background-color: #ddd;
-    color: black;  
+    color: #fa4996;
+}
+
+#main-navbar .nav-logo img {
+    width: 55px;
+    height: auto;
+    border-radius: 50%;
+    box-shadow: rgba(240, 46, 170, 0.4) 2px 2px, rgba(240, 46, 170, 0.3) 4px 4px, rgba(240, 46, 170, 0.2) 6px 6px;
 }
 
 .nav-item-dr-list {
     display: none;
-    top: calc(100% + 5px);
+    top: calc(100% + 3px);
     left: 0;
-    background-color: #333;
+    background-color: #fff;
     width: max-content;
+    padding: 5px 12px;
+    border-radius: 0 0 6px 6px;
+    transition: all 0.3s linear;
 }
 
 .nav-item:hover .nav-item-dr-list {
     display: block;
+    transition: all 0.3s ease-out;
 }
 
-.nav-item:hover .nav-item-dr-list::after{
+.nav-item:hover .nav-item-dr-list::after {
     content: '';
     background-color: transparent;
     height: 5px;
@@ -54,46 +65,65 @@
     left: 0;
 }
 
-.nav-item-dr-list a.nav-dropdown-items{
+.nav-item-dr-list a.nav-dropdown-items {
     text-decoration: none;
     display: block;
-    color: white;
+    color: #000;
     text-align: start;
     padding: 10px 5px;
+    cursor: pointer;
+    transition: all 0.3s linear;
 }
 
 .nav-item-dr-list a.nav-dropdown-items:hover {
-    background-color: #ddd;
-    color: black;  
+    /* background-color: #fff; */
+    color: #fa4996;
+    transform: translate(5px, -5px);
 }
 
 .nav-menu-icon {
-    font-size: 24px;
+    font-size: 20px;
+    width: 45px;
+    height: 40px;
+    border-radius: 6px;
+    background-image: linear-gradient(to right, #ff91c0, #fa4996);
+    /* color: # !important; */
+}
+
+.nav-menu-icon::before {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
-#mobile__header-nav:checked + .modal__overlay{
-    display : block;
+#mobile__header-nav:checked+.modal__overlay {
+    display: block;
     animation: fadeIn 0.3s linear;
 }
 
-#mobile__header-nav:checked ~ .mobile__header-nav-wrap{
-    display : block;
+#mobile__header-nav:checked~.mobile__header-nav-wrap {
+    display: block;
 
 }
-#mobile__header-nav:checked ~ .mobile__header-nav{
+
+#mobile__header-nav:checked~.mobile__header-nav {
     transform: translateX(0);
 }
-#mobile__header-nav:checked + .modal__overlay{
-    display : block;
+
+#mobile__header-nav:checked+.modal__overlay {
+    display: block;
     animation: fadeIn 0.3s linear;
 }
-.mobile__header-nav{
-    position : fixed;
-    top: calc(0% + 50px);
+
+.mobile__header-nav {
+    position: fixed;
+    top: calc(0% + 80px);
     transform: translateX(-100%);
     width: 66.7%;
-    background-color:white;
+    background-color: white;
     height: calc(100% - 73px);
     z-index: 4;
     left: 0;
@@ -104,9 +134,9 @@
     overflow-y: auto;
 }
 
-.mobile__category-item-link{
-    display : flex;
-    justify-content:space-between;
+.mobile__category-item-link {
+    display: flex;
+    justify-content: space-between;
     align-items: center;
     padding: 12px 15px;
     text-decoration: none;
@@ -114,39 +144,72 @@
     font-size: 1.2rem;
     border-bottom: 1px solid rgba(0, 0, 0, 0.09);
 }
-.mobile__category-item-icon--down{
-    display : none;
+
+.mobile__category-item-icon--down {
+    display: none;
 }
 
-.mobile__header-nav{
-    display : block;
+.mobile__header-nav {
+    display: block;
 }
 
-.mobile__category-item-icon{
-    font-size : 0.8rem;
+.mobile__category-item-icon {
+    font-size: 0.8rem;
 }
-.mobile__category-item-child-item{
-    background-color : #f9f9f9;
+
+.mobile__category-item-child-item {
+    background-color: #f9f9f9;
     width: 100%;
-    border-bottom : 1px solid rgba(0, 0, 0, 0.09);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.09);
 }
-.mobile__category-child-item-link{
-    text-decoration : none;
-    font-size : 1.2rem;
+
+.mobile__category-child-item-link {
+    text-decoration: none;
+    font-size: 1.2rem;
     width: 100%;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
-    color : var(--text-color);
-    padding : 12px 28px;
-    display : block;
+    color: var(--text-color);
+    padding: 12px 28px;
+    display: block;
     margin-right: 0;
 
 }
 
+.hero-background {
+    height: 70vh;
+    background-image: url('https://images.unsplash.com/photo-1542810634-71277d95dcbb?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80');
+    background-repeat: no-repeat;
+    background-position: center ;
+    background-size: cover;
+    background-attachment: fixed;
+}
+@media (max-width: 992px) {
+    .hero-background {
+        height: 80vh;
+    }
+}
+
+.hero-background::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-image: linear-gradient(to bottom, rgba(255, 65, 242, 0.1), rgba(255, 65, 242, 0.2));
+    /* background-color: rgba(0, 0, 0, 0.2); */
+}
+
 .hero-banner-img {
+    position: relative;
     width: 100%;
-    height: auto;
+    height: 100%;
+}
+
+.hero-banner-img::before {
+    content: '';
+    position: absolute;
+    inset: 0;
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.8));
 }
 
 .hero-banner-mission-wrapper {
@@ -161,8 +224,8 @@
     font-size: 24px;
     color: #009292;
     background-color: white;
-    -webkit-box-shadow: 5px 7px 15px 4px rgba(0,0,0,0.44); 
-    box-shadow: 5px 7px 15px 4px rgba(0,0,0,0.44);
+    -webkit-box-shadow: 5px 7px 15px 4px rgba(0, 0, 0, 0.44);
+    box-shadow: 5px 7px 15px 4px rgba(0, 0, 0, 0.44);
 }
 
 .banner-logo {
@@ -172,20 +235,16 @@
     bottom: calc(0% - 50px);
 }
 
-.banner-logo img{
+.banner-logo img {
     height: 100px;
     width: 100px;
+    border-radius: 50%;
+    box-shadow: rgba(240, 46, 170, 0.4) 5px 5px, rgba(240, 46, 170, 0.3) 10px 10px, rgba(240, 46, 170, 0.2) 15px 15px, rgba(240, 46, 170, 0.1) 20px 20px, rgba(240, 46, 170, 0.05) 25px 25px;
+    z-index: 1;
 }
 
 .vision-section {
-    background-color: white;
-    margin-top: 80px;
-    color: black;
-}
-
-.vision-title {
-    font-size: 24px;
-    font-weight: bold;
+    margin-top: 90px;
 }
 
 .vision-desc {
@@ -200,20 +259,39 @@
     width: 292px;
     margin-bottom: 35px;
 }
+
 .vision-img-wrapper {
-    height: 292px;
-    width: 292px;
+    height: 320px;
+    width: 330px;
     margin-bottom: 35px;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
+    transition: all 0.3s linear;
+    
 }
 
-.vision-img-wrapper img{
-    width: 100%;
-    height: 100%;
+.vision-img-wrapper:hover,
+.vision-img-wrapper:hover img {
+    transform: translateY(-10px);
+}
+
+.vision-img-wrapper img {
+    transition: all 0.3s linear;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 300px;
+    height: 320px;
+    border-radius: 50%;
 }
 
 .vision-items-img-desc {
     text-align: center;
-    font-size: 19px;
+    font-size: 18px;
+    font-family: 'Raleway', sans-serif;
 }
 
 .vision-items {
@@ -227,10 +305,10 @@
 }
 
 .slider {
-	width: 40rem;
+    width: 40rem;
 }
 
-footer.site-footer {
+/* footer.site-footer {
     background-color: var(--ktcb-primary-blue);
 }
 
@@ -257,7 +335,7 @@ footer.site-footer {
     font-size: 24px;
 }
 
-.social-networks-items.social-networks-items--phone{ 
+.social-networks-items.social-networks-items--phone {
     font-size: 16px;
     text-decoration: none;
 }
@@ -272,4 +350,4 @@ footer.site-footer {
 
 .footer-items-icon-wrapper {
     min-width: 24px;
-}
+} */
