--- a/includes/header.html
+++ b/includes/header.html
@@ -6,16 +6,13 @@
         <div class="d-none d-md-block nav-item position-relative">
             <!-- Start About KTCB -->
             <ul class="nav-item-dr-list position-absolute">
-                <a class="nav-dropdown-items">
+                <a class="nav-dropdown-items" href="/pages/introduction.html">
                     Giới thiệu chung về KTCB
                 </a>
-                <a class="nav-dropdown-items">
-                    Sứ mệnh của KTCB
-                </a>
-                <a class="nav-dropdown-items">
+                <a class="nav-dropdown-items" href="/pages/introduction-team.html">
                     Giới thiệu về nhân sự KTCB
                 </a>
-                <a class="nav-dropdown-items">
+                <a class="nav-dropdown-items" href="/pages/contact.html">
                     Thông tin liên hệ KTCB
                 </a>
             </ul>
@@ -68,6 +65,24 @@
         </label>
     </div>
 </div>
+<div class="container-fluid header-intro px-md-5 d-none d-lg-flex" style="margin-top: 80px;">
+    <div class="header-intro-content">
+        <i class="fa-solid fa-users"></i>
+        <span>23.000+ tình nguyện viên từ 2013</span>
+    </div>
+    <div class="header-intro-content">
+        <i class="fa-solid fa-location-dot"></i>
+        <span>15+ điểm dự án triển khai</span>
+    </div>
+    <div class="header-intro-content">
+        <i class="fa-solid fa-shield-heart"></i>
+        <span>An toàn tuyệt đối</span>
+    </div>
+    <div class="header-intro-content">
+        <i class="fa-solid fa-medal"></i>
+        <span>5+ giải thưởng tình nguyện</span>
+    </div>
+</div>
 <input type="checkbox" id="mobile__header-nav" class="d-none">
 <label for="mobile__header-nav" class="modal__overlay">
 </label>
@@ -85,16 +100,13 @@
                     <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne"
                         data-bs-parent="#accordionExample">
                         <div class="accordion-body">
-                            <a href="#">
+                            <a href="/pages/introduction.html">
                                 <p>Giới thiệu chung về KTCB</p>
                             </a>
-                            <a href="#">
-                                <p>Sứ mệnh của KTCB</p>
-                            </a>
-                            <a href="#">
+                            <a href="/pages/introduction-team.html">
                                 <p>Giới thiệu về nhân sự KTCB</p>
                             </a>
-                            <a href="#">
+                            <a href="/pages/contact.html">
                                 <p class="mb-0">Thông tin liên hệ KTCB</p>
                             </a>
                         </div>
@@ -167,122 +179,6 @@
                     <i class="fa-solid fa-location-arrow"></i>
                 </button>
             </div>
-            <!-- <li class="mobile__category-item"><a href="" class="mobile__category-item-link">
-                    Tất cả sản phẩm
-                </a>
-            </li>
-            <li class="mobile__category-item mobile__category-item--has-child">
-                <div class="mobile__category-item-link accordion">
-                    <span>Ohui</span>
-                    <i class="fas fa-chevron-right mobile__category-item-icon "></i>
-                </div>
-                <ul class="mobile__category-item-child-list panel">
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Ohui Thefirst Tái Sinh </a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Ohui Dưỡng Trắng</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Ohui Prime Advancer</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Ohui Dưỡng Ẩm</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Ohui Chống Lão Hóa</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Ohui Make Up</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Ohui Chống Nắng</a></li>
-
-                </ul>
-            </li>
-            <li class="mobile__category-item">
-                <div class="mobile__category-item-link accordion">
-                    <span>Whoo</span>
-                    <i class="fas fa-chevron-right mobile__category-item-icon"></i>
-                </div>
-                <ul class="mobile__category-item-child-list panel">
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Bichup </a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Dưỡng Ẩm</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Dưỡng Trắng Trị Nám</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo cấp nước chống oxy hóa</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Tái Sinh</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Make Up</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Chống Nắng</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Spa</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Chống Lão Hóa</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Whoo Hoàn Lưu Cao</a></li>
-                </ul>
-            </li>
-            <li class="mobile__category-item">
-                <div class="mobile__category-item-link accordion">
-                    <span>Su:m37</span>
-                    <i class="fas fa-chevron-right mobile__category-item-icon"></i>
-                </div>
-                <ul class="mobile__category-item-child-list panel">
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Su:m37 Tái Sinh </a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Sm:m37 Chống Lão Hóa </a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Sm:m37 Dưỡng Trắng </a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Su:m37 cấp ẩm water full </a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Su:m37 Làm Sạch </a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Su:m37 Chống Nắng Sun Away</a></li>
-                    <li class="mobile__category-item-child-item"><a href=""
-                            class="mobile__category-child-item-link">Su:m37 Make Up</a></li>
-                </ul>
-            </li>
-            <li class="mobile__category-item">
-                <div class="mobile__category-item-link accordion">
-                    <span>Set mini</span>
-                    <i class="fas fa-chevron-right mobile__category-item-icon"></i>
-                </div>
-                <ul class="mobile__category-item-child-list panel">
-                    <li class="mobile__category-item-child-item"><a href="" class="mobile__category-child-item-link">Set
-                            Ohui Mini </a></li>
-                    <li class="mobile__category-item-child-item"><a href="" class="mobile__category-child-item-link">Set
-                            Whoo Mini</a></li>
-                    <li class="mobile__category-item-child-item"><a href="" class="mobile__category-child-item-link">Set
-                            Su:m37 Mini</a></li>
-                </ul>
-            </li>
-
-        </ul>
-        <ul class="mobile__category-list">
-            <li class="mobile__category-item">
-                <a href="" class="mobile__category-item-link">
-                    <span>Thực phẩm chức năng</span>
-                </a>
-            </li>
-            <li class="mobile__category-item">
-                <a href="" class="mobile__category-item-link">
-                    <span>Dịch vụ</span>
-                </a>
-            </li>
-        </ul>
-        <ul class="mobile__category-list">
-            <li class="mobile__category-item">
-                <a href="" class="mobile__category-item-link">
-                    <span>Tin Tức</span>
-                </a>
-            </li>
-            <li class="mobile__category-item">
-                <a href="" class="mobile__category-item-link">
-                    <span>Liên Hệ</span>
-                </a>
-            </li> -->
         </ul>
     </div>
 </div>
