--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -33,6 +33,7 @@ a {
   text-decoration: none !important;
   color: unset;
 }
+
 a:hover {
   color: unset;
 }
@@ -46,7 +47,6 @@ img {
 html {
   scroll-behavior: smooth;
   position: relative;
-  min-height: 100vh;
   overflow: hidden scroll;
 }
 
@@ -59,10 +59,11 @@ body {
   padding: 12px 24px;
   border-radius: 6px;
   color: #fff;
-  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
   background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
   transition: all 0.3s linear;
 }
+
 .btn-filled-pink:hover {
   color: #fff;
   transform: translateY(-6px);
@@ -87,6 +88,7 @@ body {
   border: 1px solid #fa4996;
   transition: all 0.3s linear;
 }
+
 .btn-empty-pink:hover {
   transform: translateY(-5px);
   background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
@@ -104,6 +106,7 @@ body {
   border: 1px solid #3ba9f8;
   transition: all 0.3s linear;
 }
+
 .btn-empty-blue:hover {
   transform: translateY(-5px);
   background-image: linear-gradient(to right, #84c8f8, #3ba9f8);
@@ -124,6 +127,7 @@ body {
   cursor: pointer;
   z-index: 10;
 }
+
 .slick-prev:hover,
 .slick-next:hover {
   color: #fff;
@@ -135,6 +139,7 @@ body {
   left: -10px;
   transform: translate(0, -50%);
 }
+
 @media (max-width: 768px) {
   .slick-prev {
     left: 0;
@@ -146,6 +151,7 @@ body {
   right: -10px;
   transform: translate(0, -50%);
 }
+
 @media (max-width: 768px) {
   .slick-next {
     right: 0;
@@ -165,12 +171,14 @@ body {
   color: #fff;
   background-color: #fa4996;
 }
+
 .header-intro-content {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
 }
+
 .header-intro-content i {
   font-size: 24px;
 }
@@ -178,19 +186,23 @@ body {
 .mobile__header-nav .accordion {
   padding: 0;
 }
+
 .mobile__header-nav .accordion-button:focus {
   z-index: 3;
   border-color: none !important;
   outline: 0;
   box-shadow: none !important;
 }
+
 .mobile__header-nav .accordion-button:not(.collapsed) {
   background-color: none !important;
   box-shadow: none !important;
 }
+
 .mobile__header-nav .accordion-body p {
   transition: all 0.3s linear;
 }
+
 .mobile__header-nav .accordion-body p:hover {
   transform: translateX(10px);
   color: #3ba9f8;
@@ -201,12 +213,14 @@ body {
   color: #fff;
   padding: 40px 0;
 }
+
 .footer-title {
   text-transform: uppercase;
   position: relative;
   margin-bottom: 50px;
   font-weight: bold;
 }
+
 .footer-title::before {
   content: "";
   position: absolute;
@@ -217,24 +231,30 @@ body {
   border-radius: 10px;
   background-color: #fff;
 }
+
 .footer ul li {
   margin-bottom: 10px;
   transition: all 0.3s linear;
 }
+
 .footer ul li:hover {
   transform: translate(5px, -5px);
   opacity: 0.9;
 }
+
 .footer-socials {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
+  flex-wrap: wrap;
 }
+
 .footer-socials a {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
   font-size: 24px;
   width: 50px;
   height: 50px;
@@ -242,6 +262,7 @@ body {
   border-radius: 50%;
   transition: all 0.3s linear;
 }
+
 .footer-socials a:hover {
   background-color: #fff;
   color: #fa4996;
@@ -259,6 +280,7 @@ body {
   align-items: center;
   position: relative;
 }
+
 .background-intro-text {
   color: #fff;
   display: flex;
@@ -273,11 +295,13 @@ body {
   backdrop-filter: blur(8px);
   outline: 15px solid #fff;
 }
+
 @media (max-width: 1200px) {
   .background-intro-text {
     width: 70%;
   }
 }
+
 .background-intro-text h2::before {
   content: "";
   position: absolute;
@@ -290,6 +314,7 @@ body {
   border-radius: 10px;
   background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
 }
+
 .background-intro-text i {
   display: flex;
   justify-content: center;
@@ -303,11 +328,50 @@ body {
   right: -60px;
   background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
 }
+
 .background-intro::before {
   content: "";
   position: absolute;
   inset: 0;
   background-color: rgba(0, 0, 0, 0.5);
+}
+
+.vision-form-background {
+  position: absolute;
+  transform: translateY(-50%);
+  top: 50%;
+  width: 100%;
+  height: 200px;
+  background-image: linear-gradient(to right bottom, #f40076, #df98fa);
+  border-radius: 66% 34% 55% 45%/51% 53% 47% 49%;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.timeline-background {
+  position: absolute;
+  top: 20px;
+  left: -15%;
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  background-image: linear-gradient(to right bottom, #f40076, #df98fa);
+}
+
+@media (max-width: 992px) {
+  .timeline-background {
+    display: none;
+  }
+}
+
+@media (max-width: 768px) {
+  .timeline-background {
+    display: block;
+    width: 150px;
+    height: 150px;
+    left: unset;
+    right: -15%;
+    top: 3%;
+  }
 }
 
 .title-section {
@@ -318,6 +382,13 @@ body {
   margin: 0 auto;
   font-family: "Raleway", sans-serif;
 }
+
+@media (max-width: 576px) {
+  .title-section {
+    font-size: 1.7rem;
+  }
+}
+
 .title-section::before {
   content: "";
   position: absolute;
@@ -332,26 +403,31 @@ body {
 .span-section {
   font-family: "Raleway", sans-serif;
   opacity: 0.8;
+  text-align: center;
 }
 
 .activity-card {
   font-family: "Raleway", sans-serif;
 }
+
 .activity-card-img {
   height: 314px;
   flex-shrink: 0;
   overflow: hidden;
   border-radius: 10px;
 }
+
 .activity-card-img img {
   height: 100%;
   width: 100%;
   border-radius: 10px;
   transition: all 0.3s linear;
 }
+
 .activity-card-content {
   margin-top: 18px;
 }
+
 .activity-card-content span {
   font-size: 14px;
   padding: 8px 16px;
@@ -359,12 +435,14 @@ body {
   border-radius: 10rem;
   background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
 }
+
 .activity-card-content h3 {
   font-weight: bold;
   margin-top: 16px;
   margin-bottom: 12px;
   transition: all 0.3s linear;
 }
+
 .activity-card-content i {
   font-size: 16px;
   width: 50px;
@@ -391,4 +469,516 @@ body {
 .activity-hover:hover .activity-card-content i {
   color: #fff;
   background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
-}/*# sourceMappingURL=app.css.map */
+}
+
+.contact-box {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
+}
+
+.contact-box-icon {
+  width: 55px;
+  height: 55px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 10px;
+  color: #fff;
+  background-image: linear-gradient(to bottom right, rgba(250, 120, 176, 0.8), rgba(250, 73, 150, 0.8));
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+
+.contact-box-icon i {
+  font-size: 22px;
+}
+
+.contact-box-content h5 {
+  margin-bottom: 8px;
+}
+
+.contact-box-content p {
+  font-size: 15px;
+  opacity: 0.8;
+  font-style: italic;
+  margin-bottom: 0;
+}
+
+.form-label {
+  position: absolute;
+  top: -10px;
+  left: 20px;
+  padding: 0 8px;
+  background: #fff;
+  font-size: 13px;
+  margin-bottom: 0;
+  color: rgba(0, 0, 0, 0.7);
+}
+
+.form-control {
+  border-radius: 10px;
+  padding: 0.75rem 0.75rem;
+}
+
+.form-control:focus {
+  color: #121212;
+  background-color: rgb(255, 255, 255);
+  border-color: #fa4996;
+  outline: 0px;
+  box-shadow: 0 0 0 0.25rem rgba(253, 13, 157, 0.25);
+}
+
+.introduction-form {
+  background-color: #f8f8f8;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.introduction-form .introduction-inner {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@media (max-width: 992px) {
+  .introduction-form .introduction-inner {
+    flex-direction: column;
+  }
+}
+
+.introduction-form .introduction-inner-content,
+.introduction-form .introduction-inner-image {
+  width: 50%;
+}
+
+@media (max-width: 992px) {
+
+  .introduction-form .introduction-inner-content,
+  .introduction-form .introduction-inner-image {
+    width: 100%;
+  }
+}
+
+.introduction-form .introduction-inner-content {
+  padding: 35px;
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+
+@media (max-width: 768px) {
+  .introduction-form .introduction-inner-content {
+    padding: 35px 20px;
+  }
+}
+
+.introduction-form .introduction-inner-content h3 {
+  font-weight: 600;
+  background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-image: linear-gradient(to right bottom, #fa7cbb, #f14658);
+}
+
+.introduction-form .introduction-inner-image {
+  height: 350px;
+  overflow: hidden;
+}
+
+.introduction-form .introduction-inner-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.timeline-form {
+  position: relative;
+  display: flow-root;
+}
+
+.timeline-form::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 3px;
+  background-color: #fa4996;
+  height: 100%;
+}
+
+@media (max-width: 768px) {
+  .timeline-form::before {
+    left: 0;
+  }
+}
+
+.timeline-form::after {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 5px solid #fa4996;
+}
+
+@media (max-width: 768px) {
+  .timeline-form::after {
+    left: 0;
+  }
+}
+
+.timeline-form .timeline-item {
+  width: 50%;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 768px) {
+  .timeline-form .timeline-item {
+    width: 100%;
+  }
+}
+
+.timeline-form .timeline-item:nth-child(odd) {
+  float: right;
+  text-align: left;
+  padding-left: 50px;
+}
+
+@media (max-width: 768px) {
+  .timeline-form .timeline-item:nth-child(odd) {
+    float: left;
+    padding-left: 30px;
+  }
+}
+
+.timeline-form .timeline-item:nth-child(odd) .timeline-item-year::before {
+  left: -60px;
+  transform: translateY(-50%);
+}
+
+@media (max-width: 768px) {
+  .timeline-form .timeline-item:nth-child(odd) .timeline-item-year::before {
+    left: -40px;
+  }
+}
+
+.timeline-form .timeline-item:nth-child(odd) .timeline-item-year {
+  box-shadow: rgba(240, 46, 170, 0.4) 4px 4px, rgba(240, 46, 170, 0.3) 8px 8px, rgba(240, 46, 170, 0.2) 12px 12px;
+}
+
+@media (max-width: 768px) {
+  .timeline-form .timeline-item:nth-child(odd) .timeline-item-year {
+    box-shadow: rgba(240, 46, 170, 0.4) -4px 4px, rgba(240, 46, 170, 0.3) -8px 8px, rgba(240, 46, 170, 0.2) -12px 12px;
+  }
+}
+
+.timeline-form .timeline-item:nth-child(even) {
+  float: left;
+  text-align: right;
+  padding-right: 50px;
+}
+
+@media (max-width: 768px) {
+  .timeline-form .timeline-item:nth-child(even) {
+    padding-left: 30px;
+    text-align: left;
+    padding-right: 0;
+  }
+}
+
+.timeline-form .timeline-item:nth-child(even) .timeline-item-year::before {
+  right: -60px;
+  transform: translateY(-50%);
+}
+
+@media (max-width: 768px) {
+  .timeline-form .timeline-item:nth-child(even) .timeline-item-year::before {
+    right: unset;
+    left: -40px;
+    text-align: left;
+  }
+}
+
+.timeline-form .timeline-item:nth-child(even) .timeline-item-year {
+  box-shadow: rgba(240, 46, 170, 0.4) -4px 4px, rgba(240, 46, 170, 0.3) -8px 8px, rgba(240, 46, 170, 0.2) -12px 12px;
+}
+
+.timeline-form .timeline-item:nth-child(2) {
+  margin-top: 120px;
+}
+
+@media (max-width: 768px) {
+  .timeline-form .timeline-item:nth-child(2) {
+    margin-top: 0;
+  }
+}
+
+.timeline-form .timeline-item-year {
+  display: inline-block;
+  padding: 10px 25px;
+  border: 0;
+  color: #fff;
+  font-weight: bold;
+  font-size: 20px;
+  border-radius: 100rem;
+  margin-bottom: 20px;
+  background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
+  position: relative;
+}
+
+.timeline-form .timeline-item-year::before {
+  content: "";
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 5px solid #fa4996;
+}
+
+.timeline-form .timeline-item-image {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  padding: 20px;
+  background-color: #f8f8f8;
+  border-radius: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+}
+
+.timeline-form .timeline-item-image img {
+  border-radius: 20px;
+  width: 100%;
+  height: 100%;
+}
+
+.timeline-form .timeline-item-content {
+  margin-top: 20px;
+  font-weight: 500;
+  opacity: 0.8;
+}
+
+.vision-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 100px;
+  position: relative;
+}
+
+@media (max-width: 1200px) {
+  .vision-form {
+    gap: 40px;
+  }
+}
+
+.vision-form .vision-box {
+  position: relative;
+  flex-shrink: 0;
+  height: 450px;
+  width: 450px;
+  background-color: #eff0f4;
+  box-shadow: inset 20px 20px 20px rgba(0, 0, 0, 0.05), 25px 35px 20px rgba(0, 0, 0, 0.05), 25px 30px 30px rgba(0, 0, 0, 0.05), inset -20px -20px 25px rgba(255, 255, 255, 0.9);
+  transition: all 0.3s linear;
+}
+
+.vision-form .vision-box:first-child {
+  border-radius: 37% 63% 55% 45%/39% 30% 70% 61%;
+}
+
+.vision-form .vision-box:last-child {
+  border-radius: 51% 49% 37% 63%/63% 36% 64% 37%;
+}
+
+.vision-form .vision-box:hover {
+  border-radius: 50%;
+}
+
+.vision-form .vision-box::before {
+  content: "";
+  position: absolute;
+  top: 60px;
+  left: 85px;
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.9;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+.vision-form .vision-box::after {
+  content: "";
+  position: absolute;
+  top: 100px;
+  left: 110px;
+  width: 15px;
+  height: 15px;
+  border-radius: 50%;
+  background-color: #fff;
+  opacity: 0.9;
+  box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+.vision-form .vision-box-title {
+  position: absolute;
+  top: 50px;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: #eff0f4;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-shadow: inset 2px 5px 10px rgba(0, 0, 0, 0.1), inset -2px -5px 10px rgb(255, 255, 255), 15px 15px 10px rgba(0, 0, 0, 0.05), 15px 10px 15px rgba(0, 0, 0, 0.025);
+  padding: 15px 25px;
+  border-radius: 100rem;
+  font-weight: bold;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.vision-form .vision-box-content {
+  position: absolute;
+  top: 40%;
+  transform: translateY(-50%);
+  padding: 0 40px;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.vision-form .vision-box .more-vision,
+.vision-form .vision-box .more-mission {
+  display: none;
+  position: absolute;
+  bottom: 16%;
+  transform: translateY(-50%);
+  padding: 0 40px;
+  border-radius: 50%;
+  text-align: center;
+}
+
+.vision-form .vision-box .btn-vision,
+.vision-form .vision-box .btn-mission {
+  position: absolute;
+  bottom: 10%;
+  left: 50%;
+  transform: translateX(-50%);
+  border: 0;
+  border-radius: 100rem;
+  padding: 15px 25px;
+  color: #fff;
+  transition: all 0.3s linear;
+}
+
+.vision-form .vision-box .btn-vision:hover,
+.vision-form .vision-box .btn-mission:hover {
+  opacity: 0.8;
+}
+
+.vision-form .vision-box .btn-vision {
+  background-image: linear-gradient(to right bottom, #f40076, #df98fa);
+}
+
+.vision-form .vision-box .btn-mission {
+  background-image: linear-gradient(to right bottom, #fa7cbb, #f14658);
+}
+
+.vision,
+.timeline {
+  position: relative;
+}
+
+@media (max-width: 992px) {
+
+  .introduction,
+  .team,
+  .contact {
+    margin-top: 80px;
+  }
+}
+
+.team-form {
+  display: grid;
+  grid-gap: 60px;
+  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  height: 100%;
+}
+
+.team-form .team-card {
+  display: flex;
+  flex-direction: column;
+  background-color: rgba(238, 238, 238, 0.8);
+  min-height: 400px;
+  border-radius: 10px;
+  padding: 10px;
+  position: relative;
+  transition: al 0.3s linear;
+}
+
+.team-form .team-card::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-image: linear-gradient(to right bottom, #f40076, #df98fa);
+  transform: rotate(-3deg);
+  z-index: -1;
+  border-radius: inherit;
+}
+
+.team-form .team-card-top {
+  height: 250px;
+  overflow: hidden;
+  border-radius: 10px;
+  flex-shrink: 0;
+}
+
+.team-form .team-card-top img {
+  border-radius: 10px;
+  width: 100%;
+  height: 100%;
+}
+
+.team-form .team-card-bottom {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+  font-family: "Raleway", sans-serif;
+}
+
+.team-form .team-card-bottom h4 {
+  margin-bottom: 0;
+  font-weight: bold;
+}
+
+.team-form .team-card-bottom ul li a {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fff;
+  background-image: linear-gradient(to right bottom, #f40076, #df98fa);
+  transition: all 0.3s linear;
+}
+
+.team-form .team-card-bottom ul li a i {
+  font-size: 20px;
+}
+
+.team-form .team-card-bottom ul li a:hover {
+  transform: translateY(-8px);
+}
+
+/*# sourceMappingURL=app.css.map */
