--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -73,23 +73,19 @@ ul {
 #back-to-top {
     display: inline-block;
     background-image: linear-gradient(to right, #ff91c0, #fa4996);
-    width: 45px;
-    height: 45px;
+    width: 40px;
+    height: 40px;
     text-align: center;
-    border-radius: 4px;
+    border-radius: 6px;
     border: 0;
     position: fixed;
     bottom: 30px;
     right: 30px;
-    transition: all 0.3s linear;
+    transition: all 0.4s linear;
     opacity: 0;
     visibility: hidden;
     z-index: 1000;
     box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
-}
-
-#back-to-top:hover {
-    transform: translateY(-10px);
 }
 
 #back-to-top::after {
@@ -97,11 +93,16 @@ ul {
     font-family: FontAwesome;
     font-weight: normal;
     font-style: normal;
-    font-size: 1em;
+    font-size: 0.8em;
     color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 #back-to-top.show {
     opacity: 1;
+    transform: rotate(45deg);
     visibility: visible;
 }
