--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -1,7 +1,7 @@
 html {
     scroll-behavior: smooth;
     position: relative;
-    min-height: 100vh;
+    // min-height: 100vh;
     overflow: hidden scroll;
 }
 
