--- a/assets/sass/components/_background.scss
+++ b/assets/sass/components/_background.scss
@@ -26,7 +26,6 @@
 
         @include responsive(max_xl) {
             width: 70%;
-            // height: 80%;
         }
 
         h2::before {
@@ -64,3 +63,38 @@
         background-color: rgba(0, 0, 0, 0.5);
     }
 }
+
+.vision-form-background {
+    position: absolute;
+    transform: translateY(-50%);
+    top: 50%;
+    width: 100%;
+    height: 200px;
+    background-image: linear-gradient(to right bottom, #f40076, #df98fa);
+    border-radius: 66% 34% 55% 45% / 51% 53% 47% 49%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+}
+
+.timeline-background {
+    position: absolute;
+    top: 20px;
+    left: -15%;
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-image: linear-gradient(to right bottom, #f40076, #df98fa);
+
+    @include responsive(max_lg) {
+        display: none;
+    }
+
+    @include responsive(max_md) {
+        display: block;
+        width: 150px;
+        height: 150px;
+        left: unset;
+        right: -15%;
+        top: 3%;
+    }
+}
+
