--- a/assets/sass/components/_button.scss
+++ b/assets/sass/components/_button.scss
@@ -3,7 +3,7 @@
     padding: 12px 24px;
     border-radius: 6px;
     color: #fff;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
     @include backgroundPink;
     transition: all 0.3s linear;
 
