--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -39,11 +39,14 @@
         justify-content: flex-start;
         align-items: center;
         gap: 20px;
+        flex-wrap: wrap;
 
         a {
             display: flex;
             justify-content: center;
             align-items: center;
+            
+            flex-shrink: 0;
             font-size: 24px;
             width: 50px;
             height: 50px;
