--- a/assets/sass/components/_text.scss
+++ b/assets/sass/components/_text.scss
@@ -7,6 +7,10 @@
     margin: 0 auto;
     font-family: $secondary-font;
 
+    @include responsive (max_sm) {
+        font-size: 1.7rem;
+    }
+
     &::before {
         content: '';
         position: absolute;
@@ -22,4 +26,5 @@
 .span-section {
     font-family: $secondary-font;
     opacity: 0.8;
+    text-align: center;
 }
