--- a/assets/sass/components/_footer.scss
+++ b/assets/sass/components/_footer.scss
@@ -3,6 +3,7 @@
     // @include backgroundPink;
     color: #fff;
     padding: 40px 0;
+    overflow: hidden;
 
     &-title {
         text-transform: uppercase;
