--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,7 +1,6 @@
-<footer class="container-fluid px-md-5 footer">
-    <div class="row" data-aos="fade-down">
-        <div class="col-lg-3 col-md-12 px-5 px-md-4 py-3 py-lg-0" data-aos="fade-down" data-aos-duration="2000"
-            data-aos-delay="200">
+<footer class="container-fluid px-md-5 px-3 footer">
+    <div class="row" >
+        <div class="col-lg-3 col-md-12 px-3 px-md-4 py-3 py-lg-0">
             <h5 class="footer-title">khoảng trời của bé</h5>
             <span>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque eos qui autem. Earum, beatae laborum
                 iusto esse commodi magni</span>
@@ -15,8 +14,7 @@
                 <p class="mb-0 fw-bold"><em>Vietnam, Hanoi</em></p>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6 col-6 px-5 px-md-4 py-3 py-lg-0" data-aos="fade-down" data-aos-duration="2000"
-            data-aos-delay="200">
+        <div class="col-lg-3 col-md-6 col-6 px-3 px-md-4 py-3 py-lg-0">
             <h5 class="footer-title">thông tin</h5>
             <ul>
                 <li><a href="#">Giới thiệu chung</a></li>
@@ -25,8 +23,8 @@
                 <li><a href="#">Thông tin liên hệ</a></li>
             </ul>
         </div>
-        <div class="col-lg-3 col-md-6 col-6 px-5 px-md-4 py-3 py-lg-0" data-aos="fade-down" data-aos-duration="2000"
-            data-aos-delay="800">
+        <div class="col-lg-3 col-md-6 col-6 px-3 px-md-4 py-3 py-lg-0"
+            data-aos-delay="400">
             <h5 class="footer-title">hoạt động</h5>
             <ul>
                 <li><a href="#">Giới thiệu chung</a></li>
@@ -36,8 +34,8 @@
                 <li><a href="#">Thông tin liên hệ</a></li>
             </ul>
         </div>
-        <div class="col-lg-3 col-md-12 px-5 px-md-4 py-3 py-lg-0" data-aos="fade-down" data-aos-duration="2000"
-            data-aos-delay="800">
+        <div class="col-lg-3 col-md-12 px-3 px-md-4 py-3 py-lg-0"
+            data-aos-delay="400">
             <h5 class="footer-title">kết nối với ktcb</h5>
             <div class="footer-socials">
                 <a href="#"><i class="fa-brands fa-facebook"></i></a>
