--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -54,6 +54,10 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+#primary {
+  overflow: hidden;
+}
+
 .btn-filled-pink {
   border: 0;
   padding: 12px 24px;
@@ -158,6 +162,45 @@ body {
   }
 }
 
+.acti-news {
+  position: relative;
+}
+
+.acti-news .nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+
+.acti-news .nav-link {
+  padding: 15px 35px;
+  color: #000;
+  border-radius: 100rem 0 100rem 0;
+  transition: all 0.3s linear;
+  background-image: linear-gradient(to right bottom, rgba(250, 124, 187, 0.4), rgba(241, 70, 87, 0.3));
+}
+
+@media (max-width: 576px) {
+  .acti-news .nav-link {
+    padding: 15px 30px;
+  }
+}
+
+.acti-news .nav-link:hover {
+  color: #fff;
+  background-image: linear-gradient(to right bottom, #fa7cbb, #f14658);
+}
+
+.acti-news .nav-link.active {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
+  background-image: linear-gradient(to right bottom, #fa7cbb, #f14658);
+}
+
+.acti-news .nav-pills {
+  --bs-nav-pills-link-active-bg: unset;
+}
+
 #main-navbar {
   background-color: #fff;
 }
@@ -212,6 +255,7 @@ body {
   background-color: #fa4996;
   color: #fff;
   padding: 40px 0;
+  overflow: hidden;
 }
 
 .footer-title {
@@ -281,6 +325,12 @@ body {
   position: relative;
 }
 
+@media (max-width: 576px) {
+  .background-intro {
+    background-attachment: local;
+  }
+}
+
 .background-intro-text {
   color: #fff;
   display: flex;
@@ -299,6 +349,12 @@ body {
 @media (max-width: 1200px) {
   .background-intro-text {
     width: 70%;
+  }
+}
+
+@media (max-width: 576px) {
+  .background-intro-text {
+    justify-content: flex-start;
   }
 }
 
@@ -454,6 +510,15 @@ body {
   justify-content: center;
   align-items: center;
   transition: all 0.4s ease-out;
+}
+
+.activity-card-content p {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
 .activity-hover:hover .activity-card-img img {
@@ -771,6 +836,7 @@ body {
   flex-wrap: wrap;
   gap: 100px;
   position: relative;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 1200px) {
@@ -814,6 +880,14 @@ body {
   box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
 }
 
+@media (max-width: 576px) {
+  .vision-form .vision-box::before {
+    top: unset;
+    bottom: 80px;
+    left: 28%;
+  }
+}
+
 .vision-form .vision-box::after {
   content: "";
   position: absolute;
@@ -825,6 +899,18 @@ body {
   background-color: #fff;
   opacity: 0.9;
   box-shadow: rgb(204, 219, 232) 3px 3px 6px 0px inset, rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset;
+}
+
+@media (max-width: 576px) {
+  .vision-form .vision-box::after {
+    top: unset;
+    bottom: 60px;
+    left: 35%;
+  }
+}
+
+.vision-form .vision-box-inner {
+  position: relative;
 }
 
 .vision-form .vision-box-title {
@@ -845,9 +931,15 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
+@media (max-width: 576px) {
+  .vision-form .vision-box-title {
+    padding: 15px 20px;
+  }
+}
+
 .vision-form .vision-box-content {
   position: absolute;
-  top: 40%;
+  top: 50%;
   transform: translateY(-50%);
   padding: 0 40px;
   border-radius: 50%;
@@ -873,9 +965,20 @@ body {
   transform: translateX(-50%);
   border: 0;
   border-radius: 100rem;
-  padding: 15px 25px;
+  width: 60px;
+  height: 60px;
+  padding: 15px;
   color: #fff;
   transition: all 0.3s linear;
+  pointer-events: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.vision-form .vision-box .btn-vision i,
+.vision-form .vision-box .btn-mission i {
+  font-size: 24px;
 }
 
 .vision-form .vision-box .btn-vision:hover,
@@ -900,7 +1003,9 @@ body {
 
   .introduction,
   .team,
-  .contact {
+  .contact,
+  .acti-news,
+  .news {
     margin-top: 80px;
   }
 }
@@ -979,6 +1084,61 @@ body {
 
 .team-form .team-card-bottom ul li a:hover {
   transform: translateY(-8px);
+}
+
+.news-status {
+  color: #fff;
+  border-radius: 100rem;
+  padding: 8px 20px;
+  background-image: linear-gradient(to left bottom, #fa78b0, #fa4996);
+}
+
+@media (max-width: 576px) {
+  .news-status {
+    padding: 8px 12px;
+    font-size: 14px;
+  }
+}
+
+.news-posted {
+  opacity: 0.7;
+  font-style: italic;
+}
+
+@media (max-width: 576px) {
+  .news-posted {
+    font-size: 14px;
+  }
+}
+
+.news-title {
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.news-image-frame {
+  max-height: 300px;
+  overflow: hidden;
+  border-radius: 6px;
+}
+
+@media (max-width: 992px) {
+  .news-image-frame {
+    max-height: 500px;
+  }
+}
+
+.news-image-frame img {
+  width: 100%;
+  height: 100%;
+  border-radius: 6px;
+}
+
+.news-image p {
+  margin-top: 10px;
+  text-align: center;
+  font-size: 14px;
+  opacity: 0.85;
 }
 
 /*# sourceMappingURL=app.css.map */
