--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-/* 
-<?php header("Content-type: text/css; charset: UTF-8"); ?>
-<?php $actual_link = (isset($_SERVER['HTTPS']) && $_SERVER['HTTPS'] === 'on' ? "https" : "http") . "://$_SERVER[HTTP_HOST]"; ?> */
-
 #main-navbar {
     position: fixed;
     top: 0;
@@ -188,9 +184,9 @@
     background-attachment: fixed;
 }
 
-@media (max-width: 992px) {
+@media (max-width: 576px) {
     .hero-background {
-        height: 80vh;
+        background-attachment: local;
     }
 }
 
